# fyrnwita

./: Cargo.toml  flake.nix  module.nix
db/migrations/: 0001_initialize.sql
src/: config.rs  main.rs
src/commands/: misc.rs  mod.rs  quote.rs
