[package]
name = "fyrnwita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.24.2", features = [ "macros", "rt-multi-thread" ] }
rand = "0.8.5"
time = "0.3.17"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "time"] }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
shellexpand = "3.0.0"
indoc = "2.0.0"
